# fileshare-daemon

./: .gitignore  Cargo.toml  DISK_IO_OPTIMIZATION.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  RACE_CONDITION_FIX.md  README-QUIC.md  SIMPLIFIED_TRANSFER_FIX.md  ULTRA_SPEED_OPTIMIZATIONS.md  ULTRA_TRANSFER_IMPLEMENTATION.md  WINDOWS_BUILD.md  WINDOWS_COMPILATION_FIX.md  claude-progress-revised.md  feature-requirements.md  fileshare-detail.md  index.html  package-lock.json  package.json  pairing-implementation.md  pairing-issue.md  pairing-plan.md  pairing-progress.md  performance-analysis.md  progress-ui.md  tailwind.config.js  test_transfer.md  transfer-progress.html  transfer.html  vite.config.ts
src/: App.tsx  index.css  lib.rs  main.rs  main.tsx  transfer-progress.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: manager.rs  mod.rs
src-tauri/src/commands/: benchmark.rs  mod.rs
src-tauri/src/config/: default.toml  settings.rs
src-tauri/src/error/: mod.rs
src-tauri/src/hotkeys/: manager.rs  mod.rs  test_windows.rs
src-tauri/src/http/: client.rs  client_optimized.rs  integration.rs  mod.rs  optimization.rs  server.rs  server_optimized.rs  transfer.rs  transfer_optimized.rs
src-tauri/src/network/: connection_pool.rs  discovery.rs  high_speed_memory.rs  high_speed_pipeline.rs  high_speed_streaming.rs  mod.rs  peer.rs  peer_quic.rs  performance_monitor.rs  protocol.rs  streaming_protocol.rs  streaming_reader.rs  streaming_writer.rs
src-tauri/src/pairing/: crypto.rs  errors.rs  fast_pairing_manager.rs  manager.rs  messages.rs  mod.rs  pin.rs  session.rs  storage.rs
src-tauri/src/quic/: blazing_transfer.rs  connection.rs  demo.rs  integration.rs  mod.rs  optimized_transfer.rs  progress.rs  protocol.rs  stream_manager.rs  transfer.rs  ultra_fast_transfer.rs  ultra_transfer.rs
src-tauri/src/service/: adaptive_transfer.rs  daemon.rs  daemon_quic.rs  file_transfer.rs  mod.rs  parallel_transfer.rs  progress.rs  streaming.rs  streaming_transfer.rs
src-tauri/src/transfer/: manager.rs  mod.rs  progress.rs  state.rs  types.rs
src-tauri/src/tray-backup/: menu.rs  mod.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/windows/: mod.rs  transfer_window.rs
src/clipboard/: manager.rs  mod.rs
src/components/: AdvancedSettings.tsx  AnimatedComponents.tsx  DeviceCard.tsx  DeviceControls.tsx  DeviceManagement.tsx  DevicesList.tsx  EnhancedInfo.tsx  Headers.tsx  LoadingStates.tsx  Navigation.tsx  PairingTab.tsx  PinDisplay.tsx  ThemeToggle.tsx  Toast.tsx  TransferProgress.tsx  TransferProgressItem.tsx  TransferProgressView.tsx  TransferProgressWindow.tsx  UnpairedDeviceCard.tsx  ViewTransition.tsx
src/components/transfer/: TransferItem.tsx  TransferProgressWindow.tsx  types.ts
src/config/: default.toml  settings.rs  theme.ts
src/context/: ThemeContext.tsx
src/hooks/: useClickOutside.tsx  useDebounce.ts  useToast.tsx  useTransferView.ts
src/hotkeys/: manager.rs
src/network/: discovery.rs  mod.rs  peer.rs  protocol.rs
src/service/: daemon.rs  file_transfer.rs  mod.rs
src/stores/: viewStore.ts
src/ui/: dialogs.rs  mod.rs
src/utils/: crypto.rs
