[package]
name = "fileshare-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "The ultimate network file sharing daemon"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full", "process"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }

# Networking
mdns = "3.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = "0.8"


# System integration
tray-icon = "0.14"
winit = "0.29"
image = "0.24"

# Hotkeys (we'll add this in Phase 3)
global-hotkey = "0.5"
crossbeam-channel = "0.5"  # Add this


# Notifications
notify-rust = "4.10"

# Crypto and security
sha2 = "0.10"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Config and paths
directories = "5.0"
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }

# Auto launch
auto-launch = "0.5"
gethostname = "1.0.2"
serde_json = "1.0.140"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Variant",
    "Win32_System_SystemServices",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
