[package]
name = "fileshare-daemon"
version = "0.1.0"
description = "Over the network copy paste anything"
authors = ["npaudyal01@gmail.com"]
license = "MIT"
repository = "fileshare-daemon"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri v2
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Your existing dependencies (cleaned up)
tokio = { version = "1.0", features = ["full", "process", "time"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
mdns = "3.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
bincode = "1.3"
toml = "0.8"
notify-rust = "4.10"
sha2 = "0.10"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
directories = "5.0"
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
auto-launch = "0.5"
gethostname = "1.0.2"
global-hotkey = "0.5"
crossbeam-channel = "0.5"
# Compression support
zstd = "0.13"
lz4 = "1.24"
# Performance monitoring
sysinfo = "0.30"
# Network optimization
socket2 = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Variant",
    "Win32_System_SystemServices",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
